# dai-mcp

./: .env.docker  .env.example  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  fastmcp.json  gemini-extension.json  pyproject.toml  setup.sh
.github/chatmodes/: TERMINATOR_MODE.chatmode.md
.github/workflows/: docker-publish.yml
gemini-extension/: GEMINI.md
src/dai_mcp/: __init__.py  dai_mcp.py  server.py  utils.py
